added CSS to project

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Prework Study Guide</title>
   </head>
   <body>
@@ -32,8 +33,18 @@
         <h2>CSS</h2>
 
         <ul>
+        <li>CSS is used by developers to define how webpage content is presented to users such as the colors, aesthetics, visual layout, and organization.</li>
+        <li>There are three ways to style a webpage using CSS: inline CSS, internal CSS style sheet, and external CSS style sheet</li>
+        <li>Inline CSS is used by developers when they want to style an element directly in the HTML file.</li>
+        <li>Internal CSS style sheet</li>
+        <li>External CSS style sheet is the most common way to style a webpage. This is preferred in most cases because it allows developers to keep all their CSS rules in a separate file, which makes design changes easier.</li>
+        <li>Separation of concerns is a widely used term in web development and refers to separating code into different files based on use.</li>
+        <li>A selector defines the element or attributes to which the rules, or declarations, will apply.</li>
+        <li>Declarations contain two important components: the CSS property we want to apply and the value of the property.</li>
+        <li>To apply a rule to all elements visible on a page we use a special wild card symbol, or * as part of the declaration block. </li>
+        <li>A margin indicates how much space we want around the outside of an element.</li>
+        <li>A padding indicates how much space we want around the content inside an element.</li>
 
-        <li>Enter your CSS notes here</li>
 
         </ul>
         
