added JavaScript functions to project

--- a/index.html
+++ b/index.html
@@ -101,8 +101,24 @@
         <h2>JavaScript</h2>
 
         <ul>
+          <li>JavaScript is a high-level dynamic programming language that allows users to interact with websites.</li>
+          <li>In web development, JavaScript is the tool that takes a static HTML/CSS webpage and makes it interactive. Every time you do something with a webpage, such as click a button, retrieve data, or fill out a form is all because of Javascript.</li>
+          <li>A variable is a named container that allows us to store data in our code.</li>
+          <li>Control flow is the order in which a computer executes code in a script.</li>
+          <li>An if statement is a way of introducing decision-making into our code. Just like its name sounds, when using the if statement, code will only execute if the statement meets a condition, or is true.</li>
+          <li>An array is a single variable that is used to hold a group of data. Arrays are typically used to hold data that is related in some way.</li>
+          <li>To create an array, we declare a variable in the same way that we declared a variable with only one data item. That is, we use var and then give the variable a name. However, instead of assigning the variable to a single value, we assign the variable to a group of values.</li>
+          <li>To work with individual data items inside an array, we need to have one more piece of information: the location of the data item in the array. This location is identified with a unique number called an index.</li>
+          <li>A for loop uses the predictable pattern of indices to perform a task on all the items in an array by allowing a single code block to be executed over and over.</li>
+          <li>Developers must use another statement, such as the conditional if statement to interrupt the control flow by executing a block of code a specific number of times.</li>
+          <li>A function is a set of instructions that tells the computer how to perform a certain task</li>
+          <li>A function is different from a for loop or conditional statement because functions do not automatically execute when the JavaScript file (in our case, script.js) is run. Instead, you must call a function by name in order to execute it.</li>
+          <li>A function declaration uses the function keyword and the function name to define a function.</li>
+          <li>To execute the function, we need to call the function to interrupt the control flow by executing a block of code a specific number of times.</li>
+          <li>We use functions in JavaScript to define and reuse blocks of code </li>
+          <li></li>
 
-          <li>Enter your JavaScript notes here</li>
+
 
         </ul>
 
